Fix heading-greek display issues on small screens

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -630,14 +630,13 @@ div.heading-greek {
 .heading-greek i:nth-of-type(1) {
   content: "";
   display: block;
-  height: 1em;
   margin-bottom: 20px;
+  /*white-space: pre-line; */
 }
 
 .heading-greek i:nth-of-type(2) {
   content: "";
   display: block;
-  height: 1em;
   margin-bottom: 20px;
   margin-top: 0px;
 }
